@@ -1,0 +1,11 @@
+%product conglomerate
+%copyright 1993-2005 David MacDonald
+%vendor McConnell Brain Imaging Centre
+%packager Andrew Janke <a.janke@gmail.com>
+%license COPYING
+%readme README
+%description Everything that doesn't fit in anywhere else
+%version @VERSION@
+%requires netcdf
+%requires minc
+%requires bicpl
